feat：完善数据加解密拦截器

--- a/Read/ReadLeetcode/02.链表实现Lru原理.md
+++ b/Read/ReadLeetcode/02.链表实现Lru原理.md
@@ -62,12 +62,19 @@
 - 链表随机访问
     - 有利就有弊。链表要想随机访问第k个元素，就没有数组那么高效了。因为链表中的数据并非连续存储的，所以无法像数组那样，根据首地址和下标，通过寻址公式就能直接计算出对应的内存地址，而是需要根据指针一个结点一个结点地依次遍历，直到找到相应的结点。
     - 你可以把链表想象成一个队伍，队伍中的每个人都只知道自己后面的人是谁，所以当我们希望知道排在第 k 位的人是谁的时候，我们就需要从第一个人开始，一个一个地往下数。所以，链表随机访问的性能没有数组好，需要 O(n) 的时间复杂度。
-
+- 单链表有哪些使用场景
+    - 待完善
+ 
+ 
  
 #### 4.2 循环链表
-- 循环链表是一种特殊的单链表。实际上，循环链表也很简单。它跟单链表唯一的区别就在尾结点。我们知道，单链表的尾结点指针指向空地址，表示这就是最后的结点了。而循环链表的尾结点指针是指向链表的头结点。从我画的循环链表图中，你应该可以看出来，它像一个环一样首尾相连，所以叫作“循环”链表。
+- 循环链表是一种特殊的单链表。实际上，循环链表也很简单。
+    - 它跟单链表唯一的区别就在尾结点。我们知道，单链表的尾结点指针指向空地址，表示这就是最后的结点了。而循环链表的尾结点指针是指向链表的头结点。从我画的循环链表图中，你应该可以看出来，它像一个环一样首尾相连，所以叫作“循环”链表。
     - ![image](https://upload-images.jianshu.io/upload_images/4432347-410f21a61ed9d0d0.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
- - 和单链表相比，循环链表的优点是从链尾到链头比较方便。当要处理的数据具有环型结构特点时，就特别适合采用循环链表。比如著名的约瑟夫问题。尽管用单链表也可以实现，但是用循环链表实现的话，代码就会简洁很多。
+ - 和单链表相比，循环链表的优点是从链尾到链头比较方便。
+    - 当要处理的数据具有环型结构特点时，就特别适合采用循环链表。比如著名的约瑟夫问题。尽管用单链表也可以实现，但是用循环链表实现的话，代码就会简洁很多。
+- 循环链表有哪些使用场景
+    - 待完善
 
 
 #### 4.3 双向链表
@@ -94,7 +101,8 @@
     - ![image](https://upload-images.jianshu.io/upload_images/4432347-13b2de75ee6d5304.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 - 从画的图中可以看出来，双向链表需要额外的两个空间来存储后继结点和前驱结点的地址。所以，如果存储同样多的数据，双向链表要比单链表占用更多的内存空间。虽然两个指针比较浪费存储空间，但可以支持双向遍历，这样也带来了双向链表操作的灵活性。那相比单链表，双向链表适合解决哪种问题呢？
 - 从结构上来看，双向链表可以支持O(1)时间复杂度的情况下找到前驱结点，正是这样的特点，也使双向链表在某些情况下的插入、删除等操作都要比单链表简单、高效。
-
+- 双向链表有哪些使用场景
+    - 比如常见的list集合：LinkedList就是使用了双向链表；
  
 
 ### 05.链表删除操作
