--- a/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
+++ b/Read/ReadMeWiki/00.方案实践/23.移动端防抓包实践.md
@@ -276,7 +276,11 @@
 - 单向认证流程图
     - ![image](https://img-blog.csdnimg.cn/888b3c81230d47a8bf073fbbff97d046.png)
 - 证书是如何校验
-    - 
+    - 待完善
+- Android中如何存放证书
+    - 第一种：直接存放.crt文件放到assets或者raw文件目录下。
+    - 第二种：将1~多个如 .crt 格式的CA根证存入bks库中，当与服务器https通信时，会自动匹配、使用bks库中合适的证书。
+    - 注意点：Java的 Keytool 工具可以用来制作 bks。
 - 该方案优点和缺点分析说明
     - 优点：安全性比较高，单向认证校验证书在代码中是方便的，安全性相对较高。
     - 缺陷：CA证书存在过期的问题，证书升级。
@@ -431,6 +435,11 @@
 #### 5.5 异常设计说明
 - base64加密和解密导致错误问题
     - Android 有自带的Base64实现，flag要选Base64.NO_WRAP，不然末尾会有换行影响服务端解码。导致解码失败。
+- 如何解决CA证书过期问题
+    - 场景说明：在线上已发布的app里，关于https的CA证书过期，从而导致app所有网络请求失效无法使用。
+    - 解决方案一：将本地https的设置一个不安全校验，也就是信任所有证书（网络方案，不太推荐）
+    - 解决方案二：将xxx.cer证书改成动态读取（以文件的方式从app沙盒里面读取即可），在https证书即将过期时，从服务器下载最新的cer证书更新到沙盒里面，App每次初始化网络请求时读取sdcard最新的证书文件，这样App就永远不会出现https证书过期导致无法使用的问题。
+
 
 
 #### 5.6 Api文档
@@ -499,6 +508,11 @@
     - 手机上安装证书
     - 单向认证测试：进行网络请求，会提示SSLHandshakeException即ssl握手失败的错误提示，即表示app端的单向认证成功。
     - 数据加解密：进行网络请求，看一下请求参数和响应body数据是否加密，如果看不到实际json实体则表示加密成功。
+
+
+#### 5.8 参考博客和文档
+- TLS/SSL认证以及客户端证书导入方法
+    - http://t.zoukankan.com/blogs-of-lxl-p-10136582.html
 
 
 
