--- a/Read/ReadMeWiki/01.大型方案/24.网络请求库封装实践.md
+++ b/Read/ReadMeWiki/01.大型方案/24.网络请求库封装实践.md
@@ -9,7 +9,7 @@
     - 2.1 网络请求流程
     - 2.2 常见网络请求
     - 2.3 域名解析过程
-    - 2.4 
+    - 2.8 
 - 03.网络库封装设计
     - 3.1 网络库设计思路
     - 3.7 添加公共参数
@@ -104,6 +104,10 @@
     okHttpBuilder.sslSocketFactory(sslSocketFactory,x509TrustManager);
     okHttpBuilder.hostnameVerifier(hostnameVerifier);
     ```
+- 校验过程：
+    - 实际上，在 HTTPS 握手开始后，服务器会把整个证书链发送到客户端，给客户端做校验。校验的过程是要找到这样一条证书链，链中每个相邻节点，上级的公钥可以校验通过下级的证书，链的根节点是设备信任的锚点或者根节点可以被锚点校验。
+    - 那么锚点对于浏览器而言就是内置的根证书啦（注：根节点并不一定是根证书）。校验通过后，视情况校验客户端，以及确定加密套件和用非对称密钥来交换对称密钥。从而建立了一条安全的信道。
+
 
 
 
@@ -149,7 +153,6 @@
 ### 07.其他说明介绍
 #### 7.1 参考链接
 - 安卓OKHTTP库添加HTTPS证书验证：http://events.jianshu.io/p/bf6d5432fa55
-
 
 
 
