feat：完善app各种广播监听

--- a/Read/ReadMeWiki/01.大型方案/10.通用弹窗设计实践.md
+++ b/Read/ReadMeWiki/01.大型方案/10.通用弹窗设计实践.md
@@ -9,8 +9,9 @@
     - 2.2 Toast吐司
     - 2.3 DialogFragment
     - 2.4 PopupWindow
-    - 2.5 Snackbar
+    - 2.5 SnackBar
 - 03.弹窗的设计思想
+    - 
 - 04.弹窗的源码分析
 - 05.方案基础设计
     - 5.1 整体架构图
@@ -42,7 +43,22 @@
 
 
 ### 02.弹窗的类型
+#### 2.1 Dialog弹窗
+- Dialog是一个应用窗口
+    - 实际上Dialog的确是一个应用窗口。看下Dialog的show()方法就知道，mWindowManager.addView相当于在window上添加view。
+    - 看到Dialog的WindowManager.LayoutParams是从Window中直接取出来的。而Window.getAttributes()返回的LayoutParams是用无参构造函数创建的，这时LayoutParams.type的值为TYPE_APPLICATION（TYPE_APPLICATION = 2），位于应用Window的层级范围内，所以Dialog属于应用窗口。
 
+
+#### 2.2 Toast吐司
+
+
+#### 2.3 DialogFragment
+
+
+#### 2.4 PopupWindow
+
+
+#### 2.5 SnackBar
 
 
 ### 04.弹窗的源码分析
