--- a/Read/ReadMeWiki/00.方案实践/20.高性能图片优化方案.md
+++ b/Read/ReadMeWiki/00.方案实践/20.高性能图片优化方案.md
@@ -48,7 +48,8 @@
 - 08.图片一些其他操作
     - 8.1 图片高斯模糊优化
     - 8.2 图片设置圆角操作
-
+- 09.图片的一些原理
+    - 9.1 View生成图片原理
 
 
 ### 01.图片基础概念介绍
@@ -608,6 +609,23 @@
 
 
 #### 8.2 图片设置圆角操作
+
+
+
+### 09.图片的一些原理
+#### 9.1 View生成图片原理
+- 从普通view获取图像的方法，核心API是view.getDrawingCache()，跟踪源码可知最终调用到View.java的buildDrawingCacheImpl()方法。
+    >View.getDrawingCache() 
+    >View.buildDrawingCache(boolean autoScale)
+    >buildDrawingCacheImpl(boolean autoScale)
+        >Bitmap.createBitmap，根据view的宽高属性生成一个新的bitmap对象
+        >canvas.setBitmap(bitmap)，把这个新的Bitmap设置给一个Canvas
+        >dispatchDraw(canvas)/draw(canvas)，调用源View的Draw方法，将图像原型绘制到新Bitmap上
+- View生成图片原理简单概括为
+    - 简单说，就是通过Canvas把源View的图像原型绘制到新Bitmap中，这样再将新Bitmap保存起来就得到了View的图像。
+
+
+
 
 
 
