--- a/Read/ReadMeWiki/08.思考系列/03.View工作原理反思.md
+++ b/Read/ReadMeWiki/08.思考系列/03.View工作原理反思.md
@@ -1,20 +1,37 @@
 #### 目录介绍
-- 01.View的绘制流程
-- 02.View工作流程
-- 03.View流程框架图
-- 04.View绘制原理
-- 05.View卡顿原因
+- 01.View的创建流程
+- 02.View的布局流程
+- 03.View的测量流程
+- 04.View的布局流程
+- 05.View的绘制流程
+
+
+
+### 01.View的创建流程
+- 想要弄清楚View是怎么绘制的得先弄明白View是怎么创建出来的。我们先来看下View的创建流程。
+    - ![image](https://img-blog.csdnimg.cn/e4c031c7bb2846fbafd60aa11a8e7eeb.png)
+- 在Activity加载View，在Activity的onResume方法执行后界面就展示出来。如上图所示界面创建流程大致分三个步骤：
+    - 步骤一：创建Activity，这个过程会创建一个PhoneWindow实例；
+    - 步骤二：在Activity的onCreate生命周期中setContentView设置应用开发者定义的布局View。布局设置的过程是委派给PhoneWindow来完成的。PhoneWindow先创建界面根布局，其中包括了一些系统信息展示的区域，然后把应用开发者传进来的应用界面放置到应用信息展示区域。整个界面布局形成一棵布局树ViewTree。
+    - 步骤三：在Activity的onResume生命周期中将ViewTree添加到WMS中，WMS通过ViewRootImpl来触发ViewTree的递归测量、布局和绘制的流程。这个过程完成后界面就展示出来了。
 
 
 
 
-
-### 01.View的绘制流程
+### 02.View的绘制流程
+- 界面绘制是从ViewRootImpl中开始触发的。来看下精简后的performTraversals方法。
+    ``` java
+    //frameworks\base\core\java\android\view\ViewRootImpl.java
+    private void performTraversals() {
+        performMeasure(childWidthMeasureSpec, childHeightMeasureSpec);
+        performLayout(lp, mWidth, mHeight);
+        performDraw();
+    }
+    ```
 - View的绘制流程主要分为三步：
     - onMeasure：测量视图的大小，从顶层父View到子View递归调用measure()方法，measure()调用onMeasure()方法，onMeasure()方法完成绘制工作。
     - onLayout：确定视图的位置，从顶层父View到子View递归调用layout()方法，父View将上一步measure()方法得到的子View的布局大小和布局参数，将子View放在合适的位置上。
     - onDraw：绘制最终的视图，首先ViewRoot创建一个Canvas对象，然后调用onDraw()方法进行绘制。onDraw()方法的绘制流程为
-- 从View的测量、布局和绘制原理来看，要实现自定义View，根据自定义View的种类不同，可能分别要自定义实现不同的方法。但是这些方法不外乎：**onMeasure()方法，onLayout()方法，onDraw()方法。**
 - **onMeasure()方法**：
     - 单一View，一般重写此方法，针对wrap_content情况，规定View默认的大小值，避免于match_parent情况一致。ViewGroup，若不重写，就会执行和单子View中相同逻辑，不会测量子View。一般会重写onMeasure()方法，循环测量子View。
     - Measure完成后可以通过getMeasureWidth和getMeasureHeight方法获取到view的测量后的宽高，在几乎所有的情况下都会等于最终view的宽高
@@ -39,6 +56,128 @@
     | 事件处理     | onTouchEvent  |   处理屏幕触摸事件|
     | 重绘     | invalidate  |   调用onDraw方法，重绘View中变化的部分|
     | 重新布局     | requestLayout  |   调用onLayout、onMeasure方法，重新布局|
+
+
+
+
+### 03.View的测量流程
+
+
+### 04.View的布局流程
+
+
+
+### 05.View的绘制流程
+- 来看下Draw的流程，主要看下在View的Draw方法中传递进来Canvas对象是怎么产生的。
+    ``` java
+    frameworks\base\core\java\android\view\ViewRootImpl.java
+    final Surface mSurface = new Surface();
+    
+    private void performDraw() {
+        mIsDrawing = true;
+        Trace.traceBegin(Trace.TRACE_TAG_VIEW, "draw");
+        try {
+            draw(fullRedrawNeeded);
+        } finally {
+            mIsDrawing = false;
+            Trace.traceEnd(Trace.TRACE_TAG_VIEW);
+        }
+    }
+    
+    private void draw(boolean fullRedrawNeeded) {
+        Surface surface = mSurface;
+        if (!surface.isValid()) {
+            return;
+        }
+        if (!drawSoftware(surface, mAttachInfo, xOffset, yOffset, scalingRequired, dirty)) {
+            return;
+        }
+    }
+    
+    private boolean drawSoftware(Surface surface, AttachInfo attachInfo, int xoff, int yoff,
+            boolean scalingRequired, Rect dirty) {
+        // Draw with software renderer.
+        final Canvas canvas;
+        try {
+            canvas = mSurface.lockCanvas(dirty);
+            // 这里就调用到View里了，平时复写View的onDraw(Canvas canvas)方法绘制图像时用到的canvas就是这里传递下去的。
+            mView.draw(canvas);   
+        } finally {
+            try {
+                surface.unlockCanvasAndPost(canvas);
+            } catch (IllegalArgumentException e) {
+                Log.e(mTag, "Could not unlock surface", e);
+                mLayoutRequested = true;   
+                return false;
+            }
+        }
+        return true;
+    }
+    ```
+- 从上述源码可以看到ViewRootImpl有一个Surface属性，当界面绘制时，就调用mSurface.lockCanvas方法获取一个Canvas对象传递个View递归绘制。ViewRootImpl简易类图如下。
+    - ![image](https://img-blog.csdnimg.cn/fe4d39ff6f2d4ed292282bdc9f432a9a.png)
+- 然后看一下Surface的源码
+    ``` java
+    //frameworks\base\core\java\android\view\Surface.java
+    public Canvas lockCanvas(Rect inOutDirty)
+            throws Surface.OutOfResourcesException, IllegalArgumentException {
+        synchronized (mLock) {
+            checkNotReleasedLocked();
+            if (mLockedObject != 0) {
+                throw new IllegalArgumentException("Surface was already locked");
+            }
+            mLockedObject = nativeLockCanvas(mNativeObject, mCanvas, inOutDirty);
+            return mCanvas;
+        }
+    }
+    ```
+- 然后看一下native代码如下所示
+    ```
+    //frameworks\base\core\jni\android_view_Surface.cpp
+    
+    static jlong nativeLockCanvas(JNIEnv* env, jclass clazz, jlong nativeObject, jobject canvasObj, jobject dirtyRectObj) {
+        sp<Surface> surface(reinterpret_cast<Surface *>(nativeObject));
+    
+        ANativeWindow_Buffer outBuffer;
+        status_t err = surface->lock(&outBuffer, dirtyRectPtr);
+    
+        SkImageInfo info = SkImageInfo::Make(outBuffer.width, outBuffer.height,
+                                             convertPixelFormat(outBuffer.format),
+                                             outBuffer.format == PIXEL_FORMAT_RGBX_8888
+                                                     ? kOpaque_SkAlphaType : kPremul_SkAlphaType,
+                                             GraphicsJNI::defaultColorSpace());
+    
+        SkBitmap bitmap;
+        ssize_t bpr = outBuffer.stride * bytesPerPixel(outBuffer.format);
+        bitmap.setInfo(info, bpr);
+        if (outBuffer.width > 0 && outBuffer.height > 0) {
+            bitmap.setPixels(outBuffer.bits);
+        } else {
+            // be safe with an empty bitmap.
+            bitmap.setPixels(NULL);
+        }
+    
+        Canvas* nativeCanvas = GraphicsJNI::getNativeCanvas(env, canvasObj);
+        // 给Canvas设置Bitmap
+        nativeCanvas->setBitmap(bitmap);
+    
+        sp<Surface> lockedSurface(surface);
+        lockedSurface->incStrong(&sRefBaseOwner);
+        return (jlong) lockedSurface.get();
+    }
+    ```
+    - 到这里普通View的绘制就算是跑通了。一个PhoneWindow实例就对应一个界面，以它通过树形结构组织Views，把根View设置到ViewRootImpl实例中，ViewRootImpl实例和根部局实例是一一对应的，ViewRootImpl接收系统消息来后通过根部局触发递归绘制。
+    - 我们的界面像素数据保存在Surface中，这个Surface就是在ViewRootImpl中创建的。
+    - ![image](https://img-blog.csdnimg.cn/bba439f66ef441e5a6eec06d2720ab83.png)      
+
+
+
+
+
+
+
+
+
 
 
 
