--- a/Read/ReadVideoWiki/01.原理知识/11.SurfaceView深入学习.md
+++ b/Read/ReadVideoWiki/01.原理知识/11.SurfaceView深入学习.md
@@ -11,6 +11,7 @@
 - 09.SurfaceView问题
 
 
+
 ### 01.先来思考几个问题
 - 首先思考几个问题
     - SurfaceView跟普通的View根本区别是什么？为何视频或游戏场景中，图像的绘制和显示不会卡顿？
@@ -253,6 +254,39 @@
     - 每次实际显示的是frontCanvas，backCanvas存储的是上一次更改前的视图，当使用lockCanvas（）获取画布时，得到的实际上是backCanvas而不是正在显示的frontCanvas，之后你在获取到的backCanvas上绘制新视图，再unlockCanvasAndPost（canvas）此视图，那么上传的这张canvas将替换原来的frontCanvas作为新的frontCanvas，原来的frontCanvas将切换到后台作为backCanvas。
 - 举一个例子加强概念理解
     - 例如，如果你已经先后两次绘制了视图A和B，那么你再调用lockCanvas（）获取视图，获得的将是A而不是正在显示的B，之后你讲重绘的C视图上传，那么C将取代B作为新的frontCanvas显示在SurfaceView上，原来的B则转换为backCanvas。
+
+
+
+#### 9.3 SurfaceView为何取不到图片
+- 从普通view获取图像的方法，核心API是view.getDrawingCache()，跟踪源码可知最终调用到View.java的buildDrawingCacheImpl()方法。
+    >View.getDrawingCache() 
+    >View.buildDrawingCache(boolean autoScale)
+    >buildDrawingCacheImpl(boolean autoScale)
+        >Bitmap.createBitmap，根据view的宽高属性生成一个新的bitmap对象
+        >canvas.setBitmap(bitmap)，把这个新的Bitmap设置给一个Canvas
+        >dispatchDraw(canvas)/draw(canvas)，调用源View的Draw方法，将图像原型绘制到新Bitmap上
+    - 简单说，就是通过Canvas把源View的图像原型绘制到新Bitmap中，这样再将新Bitmap保存起来就得到了View的图像。
+- 来看下SurfaceView的Draw方法的实现
+    - 普通View的图形就是调用View的Draw方法在新的Bitmap上再绘制一次。那为啥同样的逻辑在SurfaceView上无效呢？让我们来看下SurfaceView的Draw方法的实现。
+    ```
+    //frameworks\base\core\java\android\view\SurfaceView.java
+    @Override
+    public void draw(Canvas canvas) {
+        if (mWindowType != WindowManager.LayoutParams.TYPE_APPLICATION_PANEL) {
+            // draw() is not called when SKIP_DRAW is set
+            if ((mPrivateFlags & PFLAG_SKIP_DRAW) == 0) {
+                // punch a whole in the view-hierarchy below us
+                canvas.drawColor(0, PorterDuff.Mode.CLEAR);
+            }
+        }
+        super.draw(canvas);
+    }
+    ```
+    - 关键代码就这行canvas.drawColor(0, PorterDuff.Mode.CLEAR);源码中注释已经解释了这行代码的作用，就是在View层打一个洞露出View层下面的东西。
+    - 可以看到使用PorterDuff.Mode.CLEAR模式drawColor就是绘制全透明。
+    - 最终调用了super.draw(canvas)，实际调用View的onDraw方法来绘制View的内容，但是我们看SurfaceView的源码发现它没有实现onDraw方法。也就是说在普通View递归绘制过程中，SurfaceView在View层只绘制了一个透明窗口。
+- 为什么SurfaceView取不到图片
+    - 普通View获取图像换成的原理是调用View的Draw方法在新的Bitmap上绘制一次View的内容，但是SurfaceView比较特别，它的展示内容绘制不是通过draw流程绘制的，所以我们通过这种方式获取不到图像缓存。
 
 
 
