--- a/Read/ReadVideoWiki/00.方案实践/09.语音播报方案设计实践.md
+++ b/Read/ReadVideoWiki/00.方案实践/09.语音播报方案设计实践.md
@@ -1,12 +1,102 @@
 # TTS音频播放基础
 #### 目录介绍
-- 01.TTS简单的描述
-- 02.TTS简单的案例
-- 03.TTS播报监听处理
-- 04.TTS播报异常分析
-- 05.TTS播放音频案例
-- 06.TTS播放测试用例
-- 08.TTS接口设计架构
+- 01.整体介绍概述
+    - 1.1 项目背景介绍
+    - 1.2 遇到问题
+    - 1.3 基础概念介绍
+    - 1.4 设计目标
+- 02.技术调研说明
+    - 2.1 语音播放方案
+    - 2.2 TTS技术分析
+    - 2.3 语音合成技术
+    - 2.4 方案选择说明
+
+
+### 01.整体介绍概述
+#### 1.1 项目背景介绍
+
+
+
+#### 1.2 遇到问题
+
+
+
+#### 1.3 基础概念介绍
+- TTS现状和发展
+    - 语音合成又称文语转换（Text to Speech，TTS）技术，是语音处理领域的一个重要的研究方向，旨在让机器生成自然动听的人类语音。
+      
+
+
+#### 1.4 设计目标
+
+
+
+### 02.技术调研说明
+#### 2.1 语音播放方案
+- 调研后主要的语音播报方案有一下几种：
+    - 基于第三方的TTS SDK，如百度、思必驰、讯飞等；
+    - 自研Native的TTS引擎+模型；
+    - 基于云端的TTS方案；
+    - 使用手机自带的TTS引擎。
+
+
+#### 2.2 TTS技术分析
+- TTS技术主要分为两种：
+    - 通用TTS：适用于导航、语音播报、智能客服和大多数语音交互场景；
+    - 个性化TTS：主要应用于对声音质量较高的教育、长音频、直播以及影视游戏配音等场景中。
+
+
+#### 2.3 语音合成技术
+- 语音合成模型经过长时间的发展
+    - 由最初的基于拼接合成，到参数合成，逐渐达到了现阶段感情充沛的基于端到端合成，最新一代端到端合成降低了对语言学知识的要求，可批量实现多语种的合成系统，语音自然程度高。
+- 语音合成技术内部分为前端和后端。
+    - 前端主要负责文本的语音解析和处理，其处理内容主要包括语种、分词、词性预测、多音字处理、韵律预测、情感等。把文本上的发音的这些信息都预测出来之后，将信息送给TTS后端系统，后台声学系统融合这些信息后，将内容转换为语音。
+    - 后端声学系统从第一代的语音拼接合成，到第二代的语音参数合成，到第三代端到端合成，后端声学系统的智能化程度逐步增加，训练素材需要标记的详细程度和难度也在逐步减弱。
+
+
+#### 2.4 方案选择说明
+- 客户端实现有三种方案：
+    - 外采：出于成本考虑，淘汰；
+    - 自研引擎：语音团队基于参数的合成引擎已完成开发，但是没有人力支撑后续的调试，而播报的话术比较固定，并且对合成声音的音质要求不是特别高，所以选择了一种基于拼接的合成方案作为备选，语句的前部分和后部分使用完整的语音，中间变换部分通过逐字方式合成；
+    - 手机自带TTS引擎：Android系统已自带了TTS引擎，但是并不是所有的手机都带了中文引擎。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#### 技术参考博客
+- Android TTS语音播报实践
+    - https://juejin.cn/post/7025531623017807886
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
