feat：音视频焦点抢占优化

--- a/Read/ReadLeetcode/11.Hash常见操作实践.md
+++ b/Read/ReadLeetcode/11.Hash常见操作实践.md
@@ -1,7 +1,7 @@
 #### 目录介绍
 - 01.什么是哈希算法
 - 02.哈希算法的应用
-- 03.安全加密
+- 03.安全加密的场景
 - 04.唯一标识
 - 05.数据校验
 - 06.散列函数
@@ -10,10 +10,13 @@
 
 
 
+
 ### 01.什么是哈希算法
 - 哈希算法历史悠久
-    - 业界著名的哈希算法也很多，比如MD5、SHA等。在我们平时的开发中，基本上都是拿现成的直接用。今天不会重点剖析哈希算法的原理，也不会教你如何设计一个哈希算法，而是从实战角度告诉你，在实际开发中，我们该如何用哈希算法解决问题。
-- 什么是哈希算法，用一句话就可以概括了。将任意长度的二进制值串映射为固定长度的二进制值串，这个映射规则就是哈希算法，而通过原始数据映射之后得到的二进制值串就是哈希值。但是，要设计一个优秀的哈希算法并不容易，我了需要满足的几点要求：
+    - 业界著名的哈希算法也很多，比如MD5、SHA等。在平时的开发中，基本上都是拿现成的直接用。今天不会重点剖析哈希算法的原理，也不会教你如何设计一个哈希算法，而是从实战角度告诉你，在实际开发中，我们该如何用哈希算法解决问题。
+- 什么是哈希算法，用一句话就可以概括了。
+    - 将任意长度的二进制值串映射为固定长度的二进制值串，这个映射规则就是哈希算法，而通过原始数据映射之后得到的二进制值串就是哈希值。
+- 但是，要设计一个优秀的哈希算法并不容易，我了需要满足的几点要求：
     - 从哈希值不能反向推导出原始数据（所以哈希算法也叫单向哈希算法）；
     - 对输入数据非常敏感，哪怕原始数据只修改了一个Bit，最后得到的哈希值也大不相同；
     - 散列总被的概率要很小，对于不同的原始数据，哈希值相同的概率非常小；
@@ -35,23 +38,29 @@
 
 
 ### 02.哈希算法的应用
+- Hash有哪些流行的算法
+    - 目前流行的 Hash 算法包括 MD5、SHA-1 和 SHA-2。
+- 哈希算法主要有哪些
+    - MD5算法：MD5，MD5+盐
+    - SHA算法：包含5个算法，分别是SHA-1、SHA-224、SHA-256、SHA-384和SHA-512，后四者并称为SHA-2。
 - 哈希算法的应用非常非常多，选了最觉的七个
     - 分别是安全加密、唯一标识、数据校验、散列函数、负载均衡、数据分片、分布式存储。
-- 哈希算法主要有哪些
-    - MD5算法：
-    - SHA算法：
-    - Hash算法：
 
 
 
-### 03.安全加密
-- 说到哈希算法的应用，最先想到的应该是安全加密。最常用于加密的哈希算法是MD5（MD5 Message-Digest Algorithm，MD5消息摘要算法）和SHA（Secure Hash Algorithm，安全散列算法）。除了这两个之外，当然还有很多其他的加密方法，比如DES（Advance Encryption Standard，高级加密标准）。
+### 03.安全加密的场景
+- 说到哈希算法的应用，最先想到的应该是安全加密。
+    - 最常用于加密的哈希算法是MD5（MD5 Message-Digest Algorithm，MD5消息摘要算法）和SHA（Secure Hash Algorithm，安全散列算法）。除了这两个之外，当然还有很多其他的加密方法，比如DES（Advance Encryption Standard，高级加密标准）。
 - 对用于加密的哈希算法来说，有两点很重要：第一是很难根据哈希值反向推导出原始数据，第二是散列冲突的概率要很小。
-    - 第一点很好理解，加密的目的就是不会后悔原始数据泄露，所以很难通过哈希值反向推导出原始以数据，这是一个基本要求。重点说说第二点，但不管什么哈希算法，我们只能尽量减少碰撞冲突的概率，理论上是没办法做到完全不冲突的，这是为什么呢？
-- 基于组合数学中一个叛党基础的理论，鸽巢原理（也叫抽屉原理）。这个原理本身很简单，它是说，如果有10个鸽巢，有11只鸽子，那肯定有1个鸽巢中的鸽子数量大于1，换句话说就是，肯定有一个巢里的鸽子数量大于1。
-- 哈希算法产生的哈希值的长度是固定且有限的。比如前面说的MD5的鸽子，哈希值是固定的128位二进制串，能表示的数据是有限的，最多表示2^128个数据，而我们要哈希的数据可以是无穷的，那必然会存在哈希值相同的情况。
-- 如果我们拿到一个MD5哈希值，希望通过毫无规律的穷举的方法，找到这个MD5值相同的另一个数据，那耗费的时间应该是个天文数字了。即便哈希算法理论上存在冲突，但还是很难破解的。
-- 除此之外，没有绝对安全的加密。越复杂、越难破解的加密算法，需要的计算时间也越长。比如SHA-256比SHA-1要更复杂、更安全，相应的计算时间就会比较长。
+    - 第一点很好理解，加密的目的就是不会后悔原始数据泄露，所以很难通过哈希值反向推导出原始以数据，这是一个基本要求。
+    - 重点说说第二点，但不管什么哈希算法，我们只能尽量减少碰撞冲突的概率，理论上是没办法做到完全不冲突的，这是为什么呢？
+- 基于组合数学中一个叛党基础的理论，鸽巢原理（也叫抽屉原理）。
+    - 这个原理本身很简单，它是说，如果有10个鸽巢，有11只鸽子，那肯定有1个鸽巢中的鸽子数量大于1，换句话说就是，肯定有一个巢里的鸽子数量大于1。
+    - 哈希算法产生的哈希值的长度是固定且有限的。比如前面说的MD5的鸽子，哈希值是固定的128位二进制串，能表示的数据是有限的，最多表示2^128个数据，而我们要哈希的数据可以是无穷的，那必然会存在哈希值相同的情况。
+    - 如果我们拿到一个MD5哈希值，希望通过毫无规律的穷举的方法，找到这个MD5值相同的另一个数据，那耗费的时间应该是个天文数字了。即便哈希算法理论上存在冲突，但还是很难破解的。
+- 除此之外，**没有绝对安全的加密**。
+    - 越复杂、越难破解的加密算法，需要的计算时间也越长。比如SHA-256比SHA-1要更复杂、更安全，相应的计算时间就会比较长。
+
 
 
 ### 04.唯一标识
