--- a/Read/ReadMeWiki/09.问题面试/06.数据结构问题汇总.md
+++ b/Read/ReadMeWiki/09.问题面试/06.数据结构问题汇总.md
@@ -2,7 +2,7 @@
 #### 目录介绍
 - 01.数组相关问题
 - 02.链表相关问题
-
+- 11.哈希算法问题
 
 
 
@@ -27,8 +27,16 @@
 
 
 
-
-
+### 11.哈希算法问题
+- 哈希算法介绍
+    - 什么是哈希算法？常见的有哪些？优秀的哈希算法需要具备那些要求？哈希算法常常用在那些场景？
+- 哈希算法场景
+    - 数据安全加密常用那种哈希算法？加密算法有哪些重要的点？MD5加密是绝对安全的吗？
+    - 如何从海量图片中搜索一张图？如果要给图片打标示，则如何取它的唯一性？如何保证图片唯一标示和图片对应起来？
+    - BT下载数据如何校验数据的完整性？哈希算法还用到了那些数据校验的场景？
+    - 散列函数一般用在那种场景，这种哈希算法对碰撞要求高吗？如何让散列值更加均匀地分布？
+- 哈希算法原理
+    - MD5加密算法的原理是什么？如何增强MD5的安全性？常见MD5破解如何做的？
 
 
 
