--- a/Read/ReadVideoWiki/00.方案实践/09.语音播报方案设计实践.md
+++ b/Read/ReadVideoWiki/00.方案实践/09.语音播报方案设计实践.md
@@ -10,6 +10,9 @@
     - 2.2 TTS技术分析
     - 2.3 语音合成技术
     - 2.4 方案选择说明
+- 03.系统自带TTS方案
+
+
 
 
 ### 01.整体介绍概述
@@ -61,7 +64,8 @@
     - 手机自带TTS引擎：Android系统已自带了TTS引擎，但是并不是所有的手机都带了中文引擎。
 
 
-
+### 03.系统自带TTS方案
+- https://juejin.cn/post/7025531623017807886
 
 
 
@@ -78,7 +82,8 @@
 #### 技术参考博客
 - Android TTS语音播报实践
     - https://juejin.cn/post/7025531623017807886
-
+- 基于APNS的语音播报实践
+    - https://juejin.cn/post/6845166891523129352
 
 
 
