--- a/Read/ReadLeetcode/11.Hash常见操作实践.md
+++ b/Read/ReadLeetcode/11.Hash常见操作实践.md
@@ -2,11 +2,13 @@
 - 01.什么是哈希算法
 - 02.哈希算法的应用
 - 03.安全加密的场景
-- 04.唯一标识
-- 05.数据校验
-- 06.散列函数
-- 07.哈希算法总结
-
+- 04.唯一标识的场景
+- 05.数据校验的场景
+- 06.散列函数的场景
+- 07.Git版本的控制
+- 08.云存储文件场景
+- 09.哈希算法的总结
+- 10.哈希算法的特点
 
 
 
@@ -63,36 +65,70 @@
 
 
 
-### 04.唯一标识
+### 04.唯一标识的场景
 - 先举个例子。如果要在海量的图库中，搜索一张图是否存在，我们不能单纯地用图片的元信息（比如图片名称）来对比，因为有可能存在名称相同但图片内容不同，或者名称不同图片内容相同的情况。那我们该如何搜索呢？
-- 任何文件在计算机中都可以表示成二进制码串，所以，比较笨的办法就是，拿要查找的图片的二进制码串与图库中所有图片的二进制码串逐一比对。如果相同，则说明图片在图库中存在。但是，每个图片小则几十KB、大则几MB,转化成二进制是一个非常长的串，比对起来非常耗时。有没有比较快的方法呢？
-- 可以给每一个图片取一个唯一标识，或者说信息摘要。比如，我们可以从图片二进制码串开关取100个字节，从中间取100个字节，从最后取100个字节，然后将这300个字节放一块。通过这个唯一标识来判定图片是否在图库中，这样就可以减少很多工作量。
-- 如果还想继续提高效率，我们可以把每个图片的唯一标识，和相应的图片文件在图库中的路径信息，都存储在散列表中。当要查看某个图片是不是在图库的时候，我们先通过哈希算法对这个图片取唯一标识，然后在散列表中查找是否存在这个标识。
-- 如果不存在，那就说明这个图片不在图库中，如果存在，我们再通过散列表存储的文件路径，获取到这个已经存在的图片，跟现在要插入的图片做全量的比对，看是否完全一样，如果一样，就说明已经存在；如果一一样，说明两张图片尽管唯一标识相同，但是并不是相同的图片。
+    - 任何文件在计算机中都可以表示成二进制码串，所以，比较笨的办法就是，拿要查找的图片的二进制码串与图库中所有图片的二进制码串逐一比对。如果相同，则说明图片在图库中存在。
+    - 但是，每个图片小则几十KB、大则几MB,转化成二进制是一个非常长的串，比对起来非常耗时。有没有比较快的方法呢？
+- 可以给每一个图片取一个唯一标识，或者说信息摘要。
+    - 比如，我们可以从图片二进制码串开关取100个字节，从中间取100个字节，从最后取100个字节，然后将这300个字节放一块。通过这个唯一标识来判定图片是否在图库中，这样就可以减少很多工作量。
+- 如果还想继续提高效率，我们可以把每个图片的唯一标识，和相应的图片文件在图库中的路径信息，都存储在散列表中。
+    - 当要查看某个图片是不是在图库的时候，我们先通过哈希算法对这个图片取唯一标识，然后在散列表中查找是否存在这个标识。
+    - 如果不存在，那就说明这个图片不在图库中，如果存在，我们再通过散列表存储的文件路径，获取到这个已经存在的图片，跟现在要插入的图片做全量的比对，看是否完全一样，如果一样，就说明已经存在；如果一一样，说明两张图片尽管唯一标识相同，但是并不是相同的图片。
 
 
 
-### 05.数据校验
-- 电驴这样的BT下载软件听过吧！我们知道，BT下载的原理是基石地P2P协议的。我们从多个机器上并行下载一个2GB的电影，这个电影文件可能会被分割成很多文件块（比如可以分成100块，每块大约200MB）。等所有的文件块都下载完成之后，再组装成一个完整的电影文件就行了。
-- 我们知道，网络传输是不安全的，下载的文件块有可能是被宿主机恶意修改过的，又或者下载过程中出现了错误，所以下载的文件块可能不是完整的。如果我们没有能力检测这种恶意修改或者文件下载出错，就会导致最终合并后的电影无法观看，甚至导致电脑中毒。现在的问题是，如何来校验文件块的安全、正确、完整呢？
-- 具体的BT协议很复杂，校验方法也有很多，我来说其中的一种思路。我们通过哈希算法，对100个文件块分别取哈希值，并且保存种子文件中。我们在前面讲过，哈希算法有一个特点，对数据很敏感。只要文件块内容有一丁点儿的改变，最后计算出的哈希值就会完全不同。所以，当文件块下载完成之后，我们可以通过相同的哈希算法，对下载好的文件逐一求哈希值，然后跟种子文件中保存的哈希值比对。如果不同，说明这个文件块不完整或者被篡改了，需要再重新从其他宿主机上下载这个文件块。
+### 05.数据校验的场景
+- 电驴这样的BT下载软件听过吧！BT下载的原理是基石地P2P协议的。
+    - 我们从多个机器上并行下载一个2GB的电影，这个电影文件可能会被分割成很多文件块（比如可以分成100块，每块大约200MB）。等所有的文件块都下载完成之后，再组装成一个完整的电影文件就行了。
+    - 网络传输是不安全的，下载的文件块有可能是被宿主机恶意修改过的，又或者下载过程中出现了错误，所以下载的文件块可能不是完整的。如果我们没有能力检测这种恶意修改或者文件下载出错，就会导致最终合并后的电影无法观看，甚至导致电脑中毒。现在的问题是，如何来校验文件块的安全、正确、完整呢？
+- 具体的BT协议很复杂，校验方法也有很多，我来说其中的一种思路。
+    - 我们通过哈希算法，对100个文件块分别取哈希值，并且保存种子文件中。在前面讲过，哈希算法有一个特点，对数据很敏感。只要文件块内容有一丁点儿的改变，最后计算出的哈希值就会完全不同。
+    - 所以，当文件块下载完成之后，我们可以通过相同的哈希算法，对下载好的文件逐一求哈希值，然后跟种子文件中保存的哈希值比对。如果不同，说明这个文件块不完整或者被篡改了，需要再重新从其他宿主机上下载这个文件块。
 
 
-### 06.散列函数
-- 散列函数是设计一个散列表的关键。它直接决定了散列冲突的概率和散列表的性能。不过，相对哈希算法的其他应用，散列函数对于散列算法冲突的要求要低很多。即便是出现个别散列冲突，只要不是过于严重，我们都可以通过开放寻址法或者链表法解决。
-- 不仅如此，散列函数对于散列算法计算得到的值，是否能反向解密也并不关心。散列函数中用到的散列算法，更加关注散列后的值是否能平均分布，也就是，一组数据是否能均匀的散列到各个槽中。除此之外，散列函数执行的快慢，也会影响散列表的性能，能以，散列函数用的散列算法一般都比较简单，比较追求效率。
+### 06.散列函数的场景
+- 散列函数是设计一个散列表的关键。
+    - 它直接决定了散列冲突的概率和散列表的性能。不过，相对哈希算法的其他应用，散列函数对于散列算法冲突的要求要低很多。即便是出现个别散列冲突，只要不是过于严重，我们都可以通过开放寻址法或者链表法解决。
+    - 不仅如此，散列函数对于散列算法计算得到的值，是否能反向解密也并不关心。散列函数中用到的散列算法，更加关注散列后的值是否能平均分布，也就是，一组数据是否能均匀的散列到各个槽中。
+    - 除此之外，散列函数执行的快慢，也会影响散列表的性能，能以，散列函数用的散列算法一般都比较简单，比较追求效率。
+- 最常见的散列函数应用场景
+    - 比如工业存储key-value集合HashMap数据结构，存储key就用到了散列函数！
+- HashMap为何对key使用哈希算法
+    - hash值（key）存在的目的是加速键值对的查找，key的作用是为了将元素适当地放在各个桶里，对于抗碰撞的要求没有那么高。
 
 
 
+### 07.Git版本的控制
+- 以Git为代表的众多版本控制工具都在使用SHA1等散列函数检查文件更新
+    - 平常提交Git记录
 
-### 07.哈希算法总结
+
+
+### 08.云存储文件场景
+- 现在大部分的网络部署和版本控制工具都在使用散列算法来保证文件可靠性。
+    - 在进行文件系统同步、备份等工具时，使用散列算法来标志文件唯一性能帮助我们减少系统开销，这一点在很多云存储服务器中都有应用。
+    - 当原有文件发生改变时，其标志值也会发生改变，从而告诉文件使用者当前的文件已经不是你所需求的文件。
+- 散列函数很难可逆
+    - 这种不可逆性体现在，你不仅不可能根据一段通过散列算法得到的指纹来获得原有的文件，也不可能简单地创造一个文件并让它的指纹与一段目标指纹相一致。
+
+
+### 09.哈希算法的总结
 - 第一个应用是唯一标识，哈希算法可以对大数据做信息摘要，通过一个较短的二进制编码来表示很大的数据。
 - 第二个应用是校验数据的完整性和正确性。
-- 第三个应用是安全加密，我们讲到任何哈希算法都会出现散列冲突，但是这个冲突的概率非常小。越是复杂的哈希算法越难破解，但同样计算时间也就越长。所以，选择哈希算法的时候，要权衡安全性和计算时间来决定用哪种哈希算法。
+- 第三个应用是安全加密，任何哈希算法都会出现散列冲突，但是这个冲突的概率非常小。越是复杂的哈希算法越难破解，但同样计算时间也就越长。所以，选择哈希算法的时候，要权衡安全性和计算时间来决定用哪种哈希算法。
 - 第四个应用是散列函数，这个我们前面讲散列表的时候详细说过，它对哈希算法的要求非常特别，更加看重的是散列的平均性和哈希算法的执行效率。
 
 
 
+### 10.哈希算法的特点
+- 正向快速：
+    - 给定明文和 hash 算法，在有限时间和有限资源内能计算出 hash 值。
+- 逆向困难：
+    - 给定（若干） hash 值，在有限时间内很难（基本不可能）逆推出明文。
+- 输入敏感：
+    - 原始输入信息修改一点信息，产生的 hash 值看起来应该都有很大不同。
+- 冲突避免：
+    - 很难找到两段内容不同的明文，使得它们的 hash 值一致（发生冲突）。即对于任意两个不同的数据块，其hash值相同的可能性极小；对于一个给定的数据块，找到和它hash值相同的数据块极为困难。
 
 
 
