feat：哈希算法运用

--- a/Read/ReadLeetcode/11.Hash常见操作实践.md
+++ b/Read/ReadLeetcode/11.Hash常见操作实践.md
@@ -10,6 +10,9 @@
 - 09.哈希算法的总结
 - 10.哈希算法的特点
 - 11.哈希算法的实践
+- 12.常用哈希码算法
+- 13.Map哈希的算法
+
 
 
 
@@ -100,7 +103,8 @@
 
 ### 07.Git版本的控制
 - 以Git为代表的众多版本控制工具都在使用SHA1等散列函数检查文件更新
-    - 平常提交Git记录
+    - 包括GitHub在内的众多版本控制工具以及各种云同步服务都是用SHA1来区别文件，很多安全证书或是签名也使用SHA1来保证唯一性。
+    - 长期以来，人们都认为SHA1是十分安全的，至少大家还没有找到一次碰撞案例。
 
 
 
@@ -133,6 +137,90 @@
 
 
 ### 11.哈希算法的实践
+- 提供几个简单的概念供大家参考
+    - 作为散列算法，首要的功能就是要使用一种算法把原有的体积很大的文件信息用若干个字符来记录，还要保证每一个字节都会对最终结果产生影响。
+    - 那么大家也许已经想到了，求模这种算法就能满足我们的需要。事实上，求模算法作为一种不可逆的计算方法，已经成为了整个现代密码学的根基。
+- 只要是涉及到计算机安全和加密的领域，都会有模计算的身影。
+    - 散列算法也并不例外，一种最原始的散列算法就是单纯地选择一个数进行模运算，比如以下程序。
+    ```
+    #  构造散列函数
+    def hash(a):
+        return a % 8
+    
+    #  测试散列函数功能
+    print(hash(233))
+    print(hash(234))
+    print(hash(235))
+    
+    # 输出结果
+    - 1
+    - 2
+    - 3
+    ```
+    - 上述的程序完成了一个散列算法所应当实现的初级目标：用较少的文本量代表很长的内容（求模之后的数字肯定小于8）。
+    - 但也许你已经注意到了，单纯使用求模算法计算之后的结果带有明显的规律性，这种规律将导致算法将能难保证不可逆性。所以我们将使用另外一种手段，那就是异或。
+- 在散列函数中加入一个异或过程
+    ```
+    #  构造散列函数
+    def hash(a):
+        return (a % 8) ^ 5
+    
+    #  测试散列函数功能
+    print(hash(233))
+    print(hash(234))
+    print(hash(235))
+    
+    # 输出结果
+    - 4
+    - 7
+    - 6
+    ```
+    - 很明显的，加入一层异或过程之后，计算之后的结果规律性就不是那么明显了。
+    - 如果用户使用连续变化的一系列文本与计算结果相比对，就很有可能找到算法所包含的规律。
+- 在进行计算之前对原始文本进行修改，或是加入额外的运算过程（如移位）
+    ```
+    #  构造散列函数
+    def hash(a):
+        return (a + 2 + (a << 1)) % 8 ^ 5
+    
+    #  测试散列函数功能
+    print(hash(233))
+    print(hash(234))
+    print(hash(235))
+    
+    # 输出结果
+    - 0
+    - 5
+    - 6
+    ```
+    - 这样处理得到的散列算法就很难发现其内部规律
+- 上面的算法是不是很简单？
+    - 事实上，常用算法MD5和SHA1，其本质算法就是这么简单，只不过会加入更多的循环和计算，来加强散列函数的可靠性。
+  
+
+
+### 12.常用哈希码算法
+- 下面给出在Java中几个常用的哈希码(hashCode)的算法。
+    - Object类的hashCode. 返回对象的经过处理后的内存地址，由于每个对象的内存地址都不一样，所以哈希码也不一样。这个是native方法，取决于JVM的内部设计，一般是某种C地址的偏移。
+    - String类的hashCode. 根据String类包含的字符串的内容，根据一种特殊算法返回哈希码，只要字符串的内容相同，返回的哈希码也相同。
+    - Integer等包装类，返回的哈希码就是Integer对象里所包含的那个整数的数值，例如Integer i1=new Integer(100), i1.hashCode的值就是100 。由此可见，2个一样大小的Integer对象，返回的哈希码也一样。
+    - int，char这样的基础类，它们不需要hashCode，如果需要存储时，将进行自动装箱操作，计算方法同上。
+
+
+
+### 13.Map哈希的算法
+- 对key进行Hash计算
+    - https://blog.csdn.net/asdzheng/article/details/70226007
+
+
+
+
+
+
+
+
+
+
 
 
 
