feat：哈希算法运用

--- a/Read/ReadLeetcode/11.Hash常见操作实践.md
+++ b/Read/ReadLeetcode/11.Hash常见操作实践.md
@@ -12,6 +12,7 @@
 - 11.哈希算法的实践
 - 12.常用哈希码算法
 - 13.Map哈希的算法
+- 14.问题思考的答疑
 
 
 
@@ -20,7 +21,7 @@
 - 哈希算法历史悠久
     - 业界著名的哈希算法也很多，比如MD5、SHA等。在平时的开发中，基本上都是拿现成的直接用。今天不会重点剖析哈希算法的原理，也不会教你如何设计一个哈希算法，而是从实战角度告诉你，在实际开发中，我们该如何用哈希算法解决问题。
 - 什么是哈希算法，用一句话就可以概括了。
-    - 将任意长度的二进制值串映射为固定长度的二进制值串，这个映射规则就是哈希算法，而通过原始数据映射之后得到的二进制值串就是哈希值。
+    - **将任意长度的二进制值串映射为固定长度的二进制值串，这个映射规则就是哈希算法，而通过原始数据映射之后得到的二进制值串就是哈希值**。
 - 但是，要设计一个优秀的哈希算法并不容易，我了需要满足的几点要求：
     - 从哈希值不能反向推导出原始数据（所以哈希算法也叫单向哈希算法）；
     - 对输入数据非常敏感，哪怕原始数据只修改了一个Bit，最后得到的哈希值也大不相同；
@@ -114,6 +115,7 @@
     - 当原有文件发生改变时，其标志值也会发生改变，从而告诉文件使用者当前的文件已经不是你所需求的文件。
 - 散列函数很难可逆
     - 这种不可逆性体现在，你不仅不可能根据一段通过散列算法得到的指纹来获得原有的文件，也不可能简单地创造一个文件并让它的指纹与一段目标指纹相一致。
+
 
 
 ### 09.哈希算法的总结
@@ -210,9 +212,74 @@
 
 ### 13.Map哈希的算法
 - 对key进行Hash计算
-    - https://blog.csdn.net/asdzheng/article/details/70226007
+    - 在JDK8中，由于使用了红黑树来处理大的链表开销，所以hash这边可以更加省力了，只用计算hashCode并移动到低位就可以了。
+    ```
+    static final int hash(Object key) {
+        int h;
+        //计算hashCode，并无符号移动到低位
+        return (key == null) ? 0 : (h = key.hashCode()) ^ (h >>> 16);
+    }
+    ```
+    - 举个例子: 363771819^(363771819 >>> 16)。这样做可以实现了高地位更加均匀地混到一起。
+    ```
+    0001 0101 1010 1110 1011 0111 1010 1011(363771819)
+    0000 0000 0000 0000 0001 0101 1010 1110(5550) XOR
+    --------------------------------------- =
+    0001 0101 1010 1110 1010 0010 0000 0101(363766277)
+    ```
+- 获取到数组的index的位置。计算了Hash，我们现在要把它插入数组中了
+    ```
+    //tab：是Node<K,V>[] tab
+    int index = (tab.length - 1) & hash;
+    ```
+    - 通过位运算，确定了当前的位置，因为HashMap数组的大小总是2^n，所以实际的运算就是 (0xfff…ff) & hash ，这里的tab.length-1相当于一个mask，滤掉了大于当前长度位的hash，使每个i都能插入到数组中。
+    - 这个对象是一个包装类，Node
+    ```
+    static class Node<K,V> implements Map.Entry<K,V> {
+            final int hash;
+            final K key;
+            V value;
+            Node<K,V> next;
+            //getter and setter .etc.
+    }
+    ```
+    - 插入包装类到数组。如果输入当前的位置是空的，就插进去，如图，左为插入前，右为插入后
+    ``` java
+        0           0
+        |           |
+        1 -> null   1 - > null
+        |           |
+        2 -> null   2 - > null
+        |           | 
+        ..-> null   ..- > null
+        |           | 
+        i -> null   i - > new node
+        |           |
+        n -> null   n - > null
+    ```
+    - 如果当前位置已经有了node，且它们发生了碰撞，则新的放到前面，旧的放到后面，这叫做链地址法处理冲突。可以发现，失败的hashCode算法会导致HashMap的性能由数组下降为链表，所以想要避免发生碰撞，就要提高hashCode结果的均匀性。
+    ```
+        0           0
+        |           |
+        1 -> null   1 - > null
+        |           |
+        2 -> null   2 - > null
+        |           | 
+        ..-> null   ..- > null
+        |           | 
+        i -> old    i - > new - > old
+        |           |
+        n -> null   n - > null
+    ```
 
 
+### 14.问题思考的答疑
+- 1.如何防止数据库中的用户信息被脱库？你会如何存储用户密码这么重要的数据吗？
+    - ①使用MD5进行加密
+    - ②字典攻击：如果用户信息被“脱库”，黑客虽然拿到的是加密之后的密文，但可以通过“猜”的方式来破解密码，这是因为，有些用户的密码太简单。
+    - ③针对字典攻击，我们可以引入一个盐（salt），跟用户密码组合在一起，增加密码的复杂度。
+- 2.在实际开发中，我们应该如何用哈希算法解决问题？
+    - 在实际开发中要权衡破解难度和计算时间来决定究竟使用哪种加密算法。
 
 
 
