feat：完善文档笔记

--- a/Read/ReadLeetcode/11.Hash常见操作实践.md
+++ b/Read/ReadLeetcode/11.Hash常见操作实践.md
@@ -1,3 +1,4 @@
+# 数据结构-Hash常见操作实践
 #### 目录介绍
 - 01.什么是哈希算法
 - 02.哈希算法的应用
@@ -12,14 +13,15 @@
 - 11.哈希算法的实践
 - 12.常用哈希码算法
 - 13.Map哈希的算法
-- 14.问题思考的答疑
-
+- 14.理解HashCode
+- 15.哈希冲突的解决
+- 16.问题思考的答疑
 
 
 
 ### 01.什么是哈希算法
 - 哈希算法历史悠久
-    - 业界著名的哈希算法也很多，比如MD5、SHA等。在平时的开发中，基本上都是拿现成的直接用。今天不会重点剖析哈希算法的原理，也不会教你如何设计一个哈希算法，而是从实战角度告诉你，在实际开发中，我们该如何用哈希算法解决问题。
+    - 业界著名的哈希算法也很多，比如MD5、SHA等。在平时的开发中，基本上都是拿现成的直接用。在实际开发中，我们该如何用哈希算法解决问题。
 - 什么是哈希算法，用一句话就可以概括了。
     - **将任意长度的二进制值串映射为固定长度的二进制值串，这个映射规则就是哈希算法，而通过原始数据映射之后得到的二进制值串就是哈希值**。
 - 但是，要设计一个优秀的哈希算法并不容易，我了需要满足的几点要求：
@@ -50,7 +52,7 @@
     - MD5算法：MD5，MD5+盐
     - SHA算法：包含5个算法，分别是SHA-1、SHA-224、SHA-256、SHA-384和SHA-512，后四者并称为SHA-2。
 - 哈希算法的应用非常非常多，选了最觉的七个
-    - 分别是安全加密、唯一标识、数据校验、散列函数、负载均衡、数据分片、分布式存储。
+    - 分别是安全加密、唯一标识、数据校验、散列函数、Git版本控制、云存储、数据分片。
 
 
 
@@ -213,7 +215,7 @@
 ### 13.Map哈希的算法
 - 对key进行Hash计算
     - 在JDK8中，由于使用了红黑树来处理大的链表开销，所以hash这边可以更加省力了，只用计算hashCode并移动到低位就可以了。
-    ```
+    ``` java
     static final int hash(Object key) {
         int h;
         //计算hashCode，并无符号移动到低位
@@ -221,7 +223,7 @@
     }
     ```
     - 举个例子: 363771819^(363771819 >>> 16)。这样做可以实现了高地位更加均匀地混到一起。
-    ```
+    ``` java
     0001 0101 1010 1110 1011 0111 1010 1011(363771819)
     0000 0000 0000 0000 0001 0101 1010 1110(5550) XOR
     --------------------------------------- =
@@ -257,7 +259,7 @@
         |           |
         n -> null   n - > null
     ```
-    - 如果当前位置已经有了node，且它们发生了碰撞，则新的放到前面，旧的放到后面，这叫做链地址法处理冲突。可以发现，失败的hashCode算法会导致HashMap的性能由数组下降为链表，所以想要避免发生碰撞，就要提高hashCode结果的均匀性。
+    - 如果当前位置已经有了node，且它们发生了碰撞，则新的放到前面，旧的放到后面，这叫做链地址法处理冲突。
     ```
         0           0
         |           |
@@ -271,19 +273,69 @@
         |           |
         n -> null   n - > null
     ```
+- 如何降低HashMap中Key的哈希冲突
+    - 可以发现，失败的hashCode算法会导致HashMap的性能由数组下降为链表，所以想要避免发生碰撞，就要提高hashCode结果的均匀性。
+    - 那么怎么提高散列值的均匀性呢？
 
 
-### 14.问题思考的答疑
+
+### 14.理解HashCode
+- HashCode也是哈希算法的一种
+    - HashCode是Object的一个方法，hashCode方法返回一个hash code值，且这个方法是为了更好的支持hash表，比如String，Set，HashTable、HashMap等;
+- HashCode的意义是什么
+    - 如果用 equal 去比较的话，如果存在1000个元素，你 new 一个新的元素出来，需要去调用1000次equal去逐个和他们比较是否是同一个对象，这样会大大降低效率。
+    - hashcode实际上是返回对象的存储地址，如果这个位置上没有元素，就把元素直接存储在上面，如果这个位置上已经存在元素，这个时候才去调用equal方法与新元素进行比较，这样大大提高效率。
+- HashCode的作用
+    - 减少查找次数，提高程序效率。例如查找是否存在重复值
+    - h(k1)≠h(k2)则k1≠k2
+    - 首先查看h(k2)输出值（内存地址），查看该内存地址是否存在值；
+    - 如果无，则表示该值不存在重复值；
+    - 如果有，则进行值比较，相同则表示该值已经存在散列列表中，如果不相同则再进行一个一个值比较；而无需一开始就一个一个值的比较，减少了查找次数
+- 用hashcode判断两个对象是否相等可以吗
+    - 肯定是不可以的，因为不同的对象可能会生成相同的hashcode值。虽然不能根据hashcode值判断两个对象是否相等，但是可以直接根据hashcode值判断两个对象不等，如果两个对象的hashcode值不等，则必定是两个不同的对象。如果要判断两个对象是否真正相等，必须通过equals方法。
+- 思考一下下面问题
+    - 使用HashMap存储对象，对key进行哈希算法，可能会出现碰撞，那么如何解决碰撞呢？
+
+
+
+### 15.哈希冲突的解决
+- 什么是哈希冲突
+    - 对不同的关键字可能得到同一散列地址，即key1≠key2，而f(key1)=f(key2)，这种现象称hash冲突。
+    - 即：key1通过f(key1)得到散列地址去存储key1，同理，key2发现自己对应的散列地址已经被key1占据了。
+- 解决办法（总共有四种）：
+- **1.开放寻址法**
+    - 所谓的开放定址法就是一旦发生了冲突，就去寻找下一个空的散列地址，只要散列表足够大，空的散列地址总能找到，并将记录存入 。
+    - 开放寻址法：Hi=(H(key) + di) MOD m,i=1,2,…，k(k<=m-1)，其中H(key)为散列函数，m为散列表长，di为增量序列，可有下列三种取法：
+        - 1)．di=1,2,3,…，m-1，称线性探测再散列；
+        - 2)．di=1^2,(-1)^2,2^2,(-2)^2,(3)^2,…，±(k)^2,(k<=m/2)称二次探测再散列；
+        - 3)．di=伪随机数序列，称伪随机探测再散列。
+    - 用开放定址法解决冲突的做法是：当冲突发生时，使用某种探测技术（线性探测法、二次探测法（解决线性探测的堆积问题）、随机探测法（和二次探测原理一致，不一样的是：二次探测以定值跳跃，而随机探测的散列地址跳跃长度是不定值））在散列表中形成一个探测序列。沿此序列逐个单元地查找，直到找到给定的关键字，或者碰到一个开放的地址（即该地址单元为空）为止插入即可。
+- **2.再哈希**
+    - 再哈希法又叫双哈希法，有多个不同的Hash函数，当发生冲突时，使用第二个，第三个，….，等哈希函数去计算地址，直到无冲突。虽然不易发生聚集，但是增加了计算时间。
+- **3.链地址法(Java HashMap就是这么做的)**
+    - 链地址法的基本思想是：每个哈希表节点都有一个next指针，多个哈希表节点可以用next指针构成一个单向链表，将所有关键字为同义词的结点链接在同一个单链表中。
+- **4.建立一个公共溢出区**
+    - 这种方法的基本思想是：将哈希表分为基本表和溢出表两部分，凡是和基本表发生冲突的元素，一律填入溢出表。
+
+
+
+### 16.问题思考的答疑
 - 1.如何防止数据库中的用户信息被脱库？你会如何存储用户密码这么重要的数据吗？
-    - ①使用MD5进行加密
-    - ②字典攻击：如果用户信息被“脱库”，黑客虽然拿到的是加密之后的密文，但可以通过“猜”的方式来破解密码，这是因为，有些用户的密码太简单。
-    - ③针对字典攻击，我们可以引入一个盐（salt），跟用户密码组合在一起，增加密码的复杂度。
+    - 一.使用MD5进行加密
+    - 二.字典攻击：如果用户信息被“脱库”，黑客虽然拿到的是加密之后的密文，但可以通过“猜”的方式来破解密码，这是因为，有些用户的密码太简单。
+    - 三.针对字典攻击，我们可以引入一个盐（salt），跟用户密码组合在一起，增加密码的复杂度。
+    - 四.最好对密码验证次数进行限时间段限制。
 - 2.在实际开发中，我们应该如何用哈希算法解决问题？
     - 在实际开发中要权衡破解难度和计算时间来决定究竟使用哪种加密算法。
+- 3.为何银行密码6个数字不易破解
+    - 用户设置一个简单密码，进行加密后就变成32位，64位，128位等密码了，然后在网上传输就安全多了，一般这种加密密码和时间戳也正相关。截获了也用处不大，就是把时间参数传递过去了，服务器也和本地时间比对的，超过3分钟他们就认为是非法消息，它是不断变化的，破解很困难。
+    - 很多网站都有输入次数限制，所以对很多网站的密码破解都集中在加密算法上，很少进行字典式攻击了，当然黑客找到网站的漏洞，绕过次数限制，也会进行字典式轰炸。 
 
 
 
-
+### 综合库：https://github.com/yangchong211/YCAppTool
+### 视频播放器：https://github.com/yangchong211/YCVideoPlayer
+### 综合博客汇总：https://github.com/yangchong211/YCBlogs
 
 
 
