--- a/Read/ReadMeWiki/09.问题面试/06.数据结构问题汇总.md
+++ b/Read/ReadMeWiki/09.问题面试/06.数据结构问题汇总.md
@@ -6,7 +6,6 @@
 
 
 
-
 ### 01.数组相关问题
 - 数组设计相关问题
     - 数组具有什么样的特性？说一下数组初始化操作？如何理解空间连续？数组使用场景有哪些？
@@ -36,6 +35,7 @@
     - 如何从海量图片中搜索一张图？如果要给图片打标示，则如何取它的唯一性？如何保证图片唯一标示和图片对应起来？
     - BT下载数据如何校验数据的完整性？哈希算法还用到了那些数据校验的场景？
     - 散列函数一般用在那种场景，这种哈希算法对碰撞要求高吗？如何让散列值更加均匀地分布？
+    - 哈希冲突如何理解？一般是怎么解决哈希冲突的，结合实际案例说一下，怎么降低哈希冲突？
 - 哈希算法原理
     - MD5加密算法的原理是什么？如何增强MD5的安全性？常见MD5破解如何做的？
 
